// Copyright (c) 2026 Team6. All rights reserved. 
//  No warranty, explicit or implicit, provided.

namespace Domain.Enums;

/// <summary>
/// Represents the shift types used in the system and database.
/// </summary>
public enum ShiftType
{
    Day,
    Evening,
    Night
}
